compatibility-tests/compile-fail/tests/ui/attribute-unparseable.stderr
error: expected boolean literal or `from`
  --> $DIR/attribute-unparseable.rs:12:24
   |
12 |         #[snafu(source(5))]
   |                        ^
